--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -19,8 +19,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
-
-        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
+        
+        <script src="https://kit.fontawesome.com/2aa7d1e097.js" crossorigin="anonymous"></script>
+        <!-- <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script> -->
         {% block head%}
         {% endblock %}
     </head>
@@ -41,6 +42,12 @@
                                 <a href="/manajemen_siswa" class="li-menu">
                                     <i class="fa fa-users"></i>&emsp;
                                     <h5 >Data Siswa/i</h5>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" class="li-menu">
+                                    <i class="fa-solid fa-address-book"></i></i>&emsp;
+                                    <h5>Daftar User</h5>
                                 </a>
                             </li>
                             
