--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -22,7 +22,7 @@
                             <!-- <img src="../static/foto_siswa/1549425553128.png" > -->
                             <div >
                                 <div class="row detail">
-                                    <h4>Nama</h4>
+                                    <h4 class="in-2">Nama</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required>
@@ -31,14 +31,14 @@
                                    
                                 <div class="row">
                                     <div class="row detail">
-                                        <h4>NIS</h4>
+                                        <h4 class="in-1">NIS</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" required>
                                         </div>
                                     </div>
                                     <div class="row detail">
-                                        <h4>NISN</h4>
+                                        <h4 class="in-1">NISN</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn">
@@ -48,7 +48,7 @@
                                 
                                 <div class="row">
                                     <div class="row detail">
-                                        <h4>Tingkat</h4>
+                                        <h4 class="in-1">Tingkat</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <select name="tingkat" required>
@@ -65,7 +65,7 @@
                                         </div>
                                     </div>
                                     <div class="row detail">
-                                        <h4>Kelas</h4>
+                                        <h4 class="in-1">Kelas</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <select name="kelas" required>
@@ -87,7 +87,7 @@
                                     
                                 <div class="row">
                                     <div class="row detail">
-                                        <h4>Jenis Kelamin</h4>
+                                        <h4 class="in-1">Jenis Kelamin</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <select name="jenis_kelamin" required>
@@ -97,7 +97,7 @@
                                         </div>
                                     </div>
                                     <div class="row detail">
-                                        <h4>Status</h4>
+                                        <h4 class="in-1">Status</h4>
                                         <h4>:</h4>
                                         <div class="dtl-style">
                                             <select name="status" required>
@@ -110,9 +110,9 @@
                                 </div>
                                 
                                 <div class="row detail">
-                                    <h4>Foto</h4>
+                                    <h4 class="in-2">Foto</h4>
                                     <h4>:</h4>
-                                    <div class="dtl-style">
+                                    <div >
                                         <input type="file" name="foto_siswa" oninput="pic.src=window.URL.createObjectURL(this.files[0])" required>
                                     </div>
                                 </div>
