--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -20,7 +20,7 @@
                         <img src="../static/foto_siswa/1549425553128.png" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
                         <div >
                             <div class="row detail">
-                                <h4>Nama</h4>
+                                <h4 class="in-2">Nama</h4>
                                 <h4>:</h4>
                                 <div class="dtl-style">
                                     <h4>{{siswa.nama_siswa}}</h4>
@@ -29,14 +29,14 @@
                                
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>NIS</h4>
+                                    <h4 class="in-1">NIS</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.nis}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>NISN</h4>
+                                    <h4 class="in-1">NISN</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.nisn}}</h4>
@@ -46,14 +46,14 @@
                             
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>Tingkat</h4>
+                                    <h4 class="in-1">Tingkat</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.nama_siswa}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>Kelas</h4>
+                                    <h4 class="in-1">Kelas</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.kelas}}</h4>
@@ -63,14 +63,14 @@
                                 
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>Jenis Kelamin</h4>
+                                    <h4 class="in-1">Jenis Kelamin</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.jenis_kelamin}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>Status</h4>
+                                    <h4 class="in-1">Status</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{siswa.status}}</h4>
