--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -232,13 +232,15 @@ nav a h5{
 
 .p-btn{
     background-color: #056A31;
+    color: white;
     padding: 10px;
     font-size: 0.9vw;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-right: 10px;
-    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
-    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
-    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+}
+
+.btn i{
+    color: white;
 }
 
 .btn:hover{
@@ -395,6 +397,7 @@ th,td{
     padding: 10px;
     font-size: 0.8vw;
     border-radius: 10px;
+    margin-right: 10px;
 }
 
 .del-btn{
@@ -402,8 +405,10 @@ th,td{
     font-size: 0.8vw;
     padding: 10px;
     border-radius: 10px;
-    margin-left:10px;
+    /* margin-left:10px; */
 }
+
+
 
 .cmd-btn{
     margin-top: 3%;
