--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -39,6 +39,12 @@
                     <nav>
                         <ul>
                             <li>
+                                <a href="/home" class="li-menu">
+                                    <i class="fa-solid fa-house"></i>&emsp;
+                                    <h5 >Dashboard</h5>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/manajemen_siswa" class="li-menu">
                                     <i class="fa fa-users"></i>&emsp;
                                     <h5 >Data Siswa/i</h5>
@@ -46,8 +52,8 @@
                             </li>
                             <li>
                                 <a href="" class="li-menu">
-                                    <i class="fa-solid fa-address-book"></i></i>&emsp;
-                                    <h5>Daftar User</h5>
+                                    <i class="fa-solid fa-address-book"></i>&emsp;
+                                    <h5>Data Staf</h5>
                                 </a>
                             </li>
                             
@@ -83,7 +89,7 @@
 
             <!-- footer -->
             <div class="footer">
-                <p>Copyright 2022</p>
+                <p>Copyright 2022 Sekolah Daarul Jannah</p>
             </div>
 
            
