--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -6,112 +6,125 @@
         <title>Tambah Data Siswa - Sistem Pembayaran DJ</title>
         <script>document.title = "Penambahan Data Siswa - Sistem Pembayaran DJ"</script>
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
-        <script src="{{ url_for('static', filename='Javascript/dynamic_option.js') }}" type="text/javascript"></script>
         {% endblock %}
     </head>
 
     <body>
         {% block body %}
-            <div class="container">
-                <h1 class="page-title">Tambah Data Siswa/i Sekolah Daarul Jannah</h1>
-                <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
-                    
-                <div class="card">
-                    <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
-                    <div class="wrap-data">
-                        <div class="preview ft-siswa">
-                            <i class="fa fa-plus"></i>
-                        </div>
-                        
-                            
-                        <table class="tb-detail-siswa">
-                            
-                                <tr>
-                                    <td><b>Nama</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required></td>
-                                </tr>
-                                <tr>
-                                    <td><b>NIS</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" required></td>
-                                    <td><b>NISN</b></td>
-                                    <td><b>:</b></td>
-                                    <td><input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn"></td>
-                                </tr>
-                                <tr>
-                                    <td><b>Tingkat</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="tingkat" id="tingkat_siswa" required  onchange="dynamicOption()">
-                                            <option disabled selected>
-                                                Pilih Tingkat
-                                            </option>
-                                            <option value="TK">
-                                                Taman Kanak-Kanak
-                                            </option>
-                                            <option value="SD">
-                                                Sekolah Dasar
-                                            </option>
-                                            <option value="SMP">
-                                                Sekolah Menengah Pertama
-                                            </option>
-                                        </select>
-                                    </td>
-                                    <td><b>Kelas</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="kelas" id="kelas_siswa" required disabled>
-                                            <option disabled>
-                                                Pilih Tingkat
-                                            </option>
-                                        </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Status</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="status" required>
-                                            <option value="Reguler">
-                                                Reguler
-                                            </option>
-                                            <option value="Yayasan">
-                                                Yayasan
-                                            </option>
-                                            <option value="Inklusi">
-                                                Inklusi
-                                            </option>
-                                        </select>
-                                    </td>
-                                    <td><b>Jenis Kelamin</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <select name="jenis_kelamin" required>
-                                            <option value="Laki-laki">
-                                                Laki-laki
-                                            </option>
-                                            <option value="Perempuan">
-                                                Perempuan
-                                            </option>
-                                        </select>
-                                    </td>
-                                </tr>
+            <h1 class="page-title">Tambah Data Siswa/i Sekolah Daarul Jannah</h1>
+            <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
+
+            <form action="/tambah_siswa" method="post" enctype="multipart/form-data">
+                <div class="container">
+                    <div class="card">
+                        <div class="row fl-stretch">
+                            <img id="pic" class="ft-siswa" style="margin-right:5%; margin-left:5%"/>
+                            <!-- <img src="../static/foto_siswa/1549425553128.png" > -->
+                            <div >
+                                <div class="row detail">
+                                    <h4 class="in-2">Nama</h4>
+                                    <h4>:</h4>
+                                    <div class="dtl-style">
+                                        <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required>
+                                    </div>
+                                </div>
+                                   
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4 class="in-1">NIS</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" required>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4 class="in-1">NISN</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn">
+                                        </div>
+                                    </div>
+                                </div>
                                 
-                                <tr>
-                                    <td><b>Foto Siswa</b></td>
-                                    <td><b>:</b></td>
-                                    <td>
-                                        <input type="file" name="foto_siswa">
-                                    </td>
-                                </tr>
-                        </table>
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4 class="in-1">Tingkat</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="tingkat" id="tingkat_siswa" required  onchange="dynamicOption()">
+                                                <option disabled selected>
+                                                    Pilih Tingkat
+                                                </option>
+                                                <option value="TK">
+                                                    Taman Kanak-Kanak
+                                                </option>
+                                                <option value="SD">
+                                                    Sekolah Dasar
+                                                </option>
+                                                <option value="SMP">
+                                                    Sekolah Menengah Pertama
+                                                </option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4 class="in-1">Kelas</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="kelas" id="kelas_siswa" required disabled>
+                                                <option disabled>
+                                                    Pilih Tingkat
+                                                </option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                    
+                                <div class="row">
+                                    <div class="row detail">
+                                        <h4 class="in-1">Jenis Kelamin</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="jenis_kelamin" required>
+                                                <option value="Laki-laki">Laki-laki</option>
+                                                <option value="Perempuan">Perempuan</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row detail">
+                                        <h4 class="in-1">Status</h4>
+                                        <h4>:</h4>
+                                        <div class="dtl-style">
+                                            <select name="status" required>
+                                                <option value="Reguler">Reguler</option>
+                                                <option value="Yayasan">Yayasan</option>
+                                                <option value="Inklusi">Inklusi</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="row detail">
+                                    <h4 class="in-2">Foto</h4>
+                                    <h4>:</h4>
+                                    <div >
+                                        <input type="file" name="foto_siswa" oninput="pic.src=window.URL.createObjectURL(this.files[0])" required>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                                
                         </div>
-                    <input type="submit" value="submit">
-                    </form>
-                </div>
-                <br>
-            </div>
+                        <div class="row cmd-btn" style="justify-content:flex-end;">
+                            <a >
+                                <input type="submit" value="submit" class="ch-btn btn">
+                                
+                            </a>
+                        </div> 
+                    </div>
+                </div> 
+                </form>
+
         {% endblock %}
     </body>
 </html> 
