--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -6,6 +6,7 @@
         <title>Tambah Data Siswa - Sistem Pembayaran DJ</title>
         <script>document.title = "Penambahan Data Siswa - Sistem Pembayaran DJ"</script>
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='Javascript/dynamic_option.js') }}"></script>
         {% endblock %}
     </head>
 
