--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -17,7 +17,8 @@
             <div class="container">
                 <div class="card">
                     <div class="row fl-stretch">
-                        <img src="../static/foto_siswa/1549425553128.png" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
+                        {% set foto_siswa = "foto_siswa/" + siswa['foto_path'] %}
+                        <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
                         <div >
                             <div class="row detail">
                                 <h4>Nama</h4>
@@ -49,7 +50,7 @@
                                     <h4>Tingkat</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <h4>{{siswa.nama_siswa}}</h4>
+                                        <h4>{{tingkat}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
@@ -111,8 +112,13 @@
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <select name="jenis_kelamin" required>
-                                            <option value="Laki-laki">Laki-laki</option>
-                                            <option value="Perempuan">Perempuan</option>
+                                            {% if siswa.jenis_kelamin == "Laki-laki" %}
+                                                <option value="Laki-laki" selected>Laki-laki</option>
+                                                <option value="Perempuan">Perempuan</option>
+                                            {% elif siswa.jenis_kelamin == "Perempuan" %}
+                                                <option value="Laki-laki">Laki-laki</option>
+                                                <option value="Perempuan" selected>Perempuan</option>
+                                            {% endif %}
                                         </select>
                                     </div>
                                 </div>
@@ -121,9 +127,19 @@
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <select name="status" required>
-                                            <option value="Reguler">Reguler</option>
-                                            <option value="Yayasan">Yayasan</option>
-                                            <option value="Inklusi">Inklusi</option>
+                                            {% if siswa.status == "Reguler" %}
+                                                <option value="Reguler" selected>Reguler</option>
+                                                <option value="Yayasan">Yayasan</option>
+                                                <option value="Inklusi">Inklusi</option>
+                                            {% elif siswa.status == "Yayasan" %}
+                                                <option value="Reguler">Reguler</option>
+                                                <option value="Yayasan" selected>Yayasan</option>
+                                                <option value="Inklusi">Inklusi</option>
+                                            {% elif siswa.status == "Inklusi" %}
+                                                <option value="Reguler">Reguler</option>
+                                                <option value="Yayasan">Yayasan</option>
+                                                <option value="Inklusi" selected>Inklusi</option>
+                                            {% endif %}
                                         </select>
                                     </div>
                                 </div>
@@ -134,8 +150,8 @@
                             
                     </div>
                     <div class="row cmd-btn" style="justify-content:flex-end;">
-                        <a >
-                            <p class="ch-btn btn">Simpan Data Siswa/i</p>
+                        <a>
+                            <input type="submit" value="Simpan Data Siswa/i" class="ch-btn btn">
                         </a>
                     </div> 
                 </div>
