--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -117,10 +117,9 @@
                                 
                         </div>
                         <div class="row cmd-btn" style="justify-content:flex-end;">
-                            <a >
-                                <input type="submit" value="submit" class="ch-btn btn">
-                                
-                            </a>
+                            
+                            <input type="submit" value="Submit" class="p-btn btn konten-profil" style="border:none">
+                               
                         </div> 
                     </div>
                 </div> 
