--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -150,9 +150,9 @@
                             
                     </div>
                     <div class="row cmd-btn" style="justify-content:flex-end;">
-                        <a>
-                            <input type="submit" value="Simpan Data Siswa/i" class="ch-btn btn">
-                        </a>
+                        
+                        <input type="submit" value="Simpan Data Siswa/i" class="p-btn btn konten-profil" style="border:none">
+                        
                     </div> 
                 </div>
             </div> 
