--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -94,6 +94,25 @@ html, body {
     text-align: center;
 }
 
+.btn-1 i{
+    color: #049DBE;
+    font-size: 20px;
+}
+
+.btn-2 i{
+    color: #0A9D71;
+    font-size: 20px;
+}
+
+.fungsi{
+    padding:10px;
+
+}
+
+.fungsi i:hover{
+    color: white;
+}
+
 ul, li, a{
     list-style-type: none;
     text-decoration: none;
@@ -247,7 +266,7 @@ nav a h5{
     background-color: #056A31;
     color: white;
     padding: 10px;
-    font-size: 0.9vw;
+    font-size: 1vw;
     border-radius: 10px;
     margin-right: 10px;
 }
@@ -294,9 +313,13 @@ select:focus, input:focus{
 
 table{
     width: 100%;
-    border: 1px solid #CCCCCC;
-    border-radius: 1em;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
+    font-size: 0.9vw;
+    border-radius: 15px;
     padding: 10px;
+    border-collapse: collapse;
 }
 
 .shadow{
@@ -306,10 +329,19 @@ table{
     font-size: 0.9vw;
 }
 
+.table{
+    margin-top: 3%;
+}
+
+th{
+    padding:10px;
+    /* background-color: #56ef98; */
+}
+
 th,td{
     text-align: center;
     color: black !important;
-    padding: 5px;
+    /* padding: 5px; */
 }
 
 .table a{
@@ -317,14 +349,17 @@ th,td{
     font-size: 0.9vw;
 }
 
-.table tr:hover{
-    border-radius: 5px;
-    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
-    -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
-    -moz-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.25) inset;
+tr{
+    border-bottom: 1px solid #ccc;
+    border-radius: 15px;
 }
 
-.table th {
+tr:hover{
+    border-radius: 15px;
+    background-color:#ccc;
+}
+
+th {
     pointer-events: none;
 }
 
@@ -421,11 +456,16 @@ th,td{
     /* margin-left:10px; */
 }
 
-
+.box-area{
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
 
 .cmd-btn{
     margin-top: 3%;
-    /* margin-bottom: 3%; */
     padding: 0;
 }
 
