--- a/Sistem Keuangan Daarul Jannah/templates/dashboard.html
+++ b/Sistem Keuangan Daarul Jannah/templates/dashboard.html
@@ -10,7 +10,10 @@
     <body>
     {% block body %}
     <div class="box-area">
-        <img src="{{ url_for('static', filename='Image/Icon1.png') }}" style="opacity: 0.25; width:298px; height:auto;">
+        <div style="display:flex;justify-content:center;flex-direction:row">
+            <img src="{{ url_for('static', filename='Image/Icon1.png') }}" style="opacity: 0.25; width:298px; height:auto;">
+        </div>
+        
     </div>
     {% endblock %}
     </body>
