--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -21,7 +21,7 @@
                         <img src="{{url_for('static', filename=foto_siswa)}}" class="ft-siswa" alt="foto orang" style="margin-right:5%; margin-left:5%">
                         <div >
                             <div class="row detail">
-                                <h4>Nama</h4>
+                                <h4 class="in-2">Nama</h4>
                                 <h4>:</h4>
                                 <div class="dtl-style">
                                     <input type="text" id="floatingInput" placeholder="Masukkan Nama" name="nama_siswa" required value="{{siswa.nama_siswa}}">
@@ -30,14 +30,14 @@
                                
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>NIS</h4>
+                                    <h4 class="in-1">NIS</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <input type="number" id="floatingInput" placeholder="Masukkan NIS" name="nis" value="{{siswa.nis}}" readonly>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>NISN</h4>
+                                    <h4 class="in-1">NISN</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <input type="number" id="floatingInput" placeholder="Masukkan NISN" name="nisn" required value="{{siswa.nisn}}">
@@ -47,14 +47,14 @@
                             
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>Tingkat</h4>
+                                    <h4 class="in-1">Tingkat</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <h4>{{tingkat}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>Kelas</h4>
+                                    <h4 class="in-1">Kelas</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <select name="kelas"  required>
@@ -108,7 +108,7 @@
                                 
                             <div class="row">
                                 <div class="row detail">
-                                    <h4>Jenis Kelamin</h4>
+                                    <h4 class="in-1">Jenis Kelamin</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <select name="jenis_kelamin" required>
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                                 <div class="row detail">
-                                    <h4>Status</h4>
+                                    <h4 class="in-1">Status</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
                                         <select name="status" required>
