--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -7,6 +7,9 @@ html, body {
     margin:0px;
 }
 
+select,input{
+    font-family: "Poppins", sans-serif !important;
+}
 
 .parent {
     display: grid;
@@ -25,7 +28,7 @@ html, body {
 .top {
     grid-area: 1 / 2 / 2 / 6; 
     border-bottom: 1px solid #CCCCCC;
-    padding: 0.5%;
+    padding: 1%;
     color:black !important;
  }
 .middle { 
@@ -238,17 +241,22 @@ nav a h5{
 .filter{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items:stretch;
     margin-top: 2%;
     margin-bottom:2%;
 }
+
+.filter>.filter-kanan {
+    flex: 1;
+  }
 
 
 .filter-kanan{
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 .filter-kiri select{
@@ -284,12 +292,13 @@ nav a h5{
     border: 1px solid #CCCCCC;
     padding: 2px;
     border-radius: 5px;
+    width:30%;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
 }
 
-.search-bar select, .search-bar input, .dtl-style select, .dtl-style input{
+.search-bar select, .search-bar input {
     height: 100%;
     border: none;
     font-weight: bolder;
@@ -300,7 +309,14 @@ nav a h5{
 }
 
 .dtl-style select, .dtl-style input{
+    height: 100%;
+    border: none;
+    font-weight: bolder;
+    /* padding: 0; */
+    padding-left: 5px;
+    background-color: transparent;
     width: 100%;
+    font-size: 1vw;
 }
 
 .search-bar select{
@@ -443,14 +459,14 @@ th {
 .ch-btn{
     background-color: #056A31;
     padding: 10px;
-    font-size: 0.8vw;
+    font-size: 1vw;
     border-radius: 10px;
     margin-right: 10px;
 }
 
 .del-btn{
     background-color: #820000;
-    font-size: 0.8vw;
+    font-size: 1vw;
     padding: 10px;
     border-radius: 10px;
     /* margin-left:10px; */
