--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -50,7 +50,7 @@
                                     <h4 class="in-1">Tingkat</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <h4>{{siswa.nama_siswa}}</h4>
+                                        <h4>{{siswa.tingkat}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
