add js active class

--- a/Sistem Keuangan Daarul Jannah/static/CSS/base.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/base.css
@@ -141,6 +141,11 @@ nav a{
     background-color: white;
 }
 
+.active{
+    color: black;
+    background-color: white;
+}
+
 nav a h5{
     padding-top: 4%;
     font-weight: normal;
