--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -37,19 +37,19 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="/home" class="li-menu">
+                                <a href="/home" class="li-menu" id="dashboard">
                                     <i class="fa-solid fa-house"></i>&emsp;
                                     <h5 >Dashboard</h5>
                                 </a>
                             </li>
                             <li>
-                                <a href="/manajemen_siswa" class="li-menu">
+                                <a href="/manajemen_siswa" class="li-menu" id="data_siswa">
                                     <i class="fa fa-users"></i>&emsp;
                                     <h5 >Data Siswa/i</h5>
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="li-menu">
+                                <a href="" class="li-menu" id="data_staf">
                                     <i class="fa-solid fa-address-book"></i>&emsp;
                                     <h5>Data Staf</h5>
                                 </a>
