--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -92,7 +92,8 @@
                         </a>
                 </div> 
                 </div>
-            </div>    
+            </div> 
+            <script src="{{url_for('static', filename='Javascript/datsis_active_class.js')}}">   </script>   
             {% endblock %}
 
 </body>
