--- a/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/ubahdatasiswa.html
@@ -157,6 +157,7 @@
                 </div>
             </div> 
             </form>
+            <script src="{{url_for('static', filename='Javascript/datsis_active_class.js')}}">   </script>
             {% endblock %}
 
 </body>
