--- a/Sistem Keuangan Daarul Jannah/templates/dashboard.html
+++ b/Sistem Keuangan Daarul Jannah/templates/dashboard.html
@@ -15,6 +15,7 @@
         </div>
         
     </div>
+    <script src="{{url_for('static', filename='Javascript/dash_active_class.js')}}">   </script>
     {% endblock %}
     </body>
 </html>
