--- a/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tambahdatasiswa.html
@@ -124,7 +124,7 @@
                     </div>
                 </div> 
                 </form>
-
+                <script src="{{url_for('static', filename='Javascript/datsis_active_class.js')}}">   </script>
         {% endblock %}
     </body>
 </html> 
