--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -49,7 +49,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="li-menu" id="data_staf">
+                                <a href="/manajemen_pegawai" class="li-menu" id="data_staf">
                                     <i class="fa-solid fa-address-book"></i>&emsp;
                                     <h5>Data Staf</h5>
                                 </a>
@@ -66,7 +66,7 @@
                 
                 <div class="dropdown" style="float:right;">
                     <button class="dropbtn">
-                        <img src="../static/Image/foto-siswa.png" class="foto-profil">
+                        <img src="../static/foto_pegawai/default.jpg" class="foto-profil">
                     </button>
                     <div class="dropdown-content" style="width:200px;padding:10px ">
                         <li><a href="" class="disabled" style="color:rgb(155, 155, 155)">Otoritas: {{session['otoritas']}}</a></li>
@@ -74,8 +74,8 @@
                     </div>
                 </div>
                 <div style="float:right;padding-right:10px">
-                    <h4>Ija Panjul</h4>
-                    <p>119140130</p>
+                    <h4>{{session['nama']}}</h4>
+                    <p>{{session['nip']}}</p>
                 </div>
             </div>
 
